# machine-learning-series

./: .gitignore  LICENSE  README.md  requirements.txt
calculus_volume1/01_functions/: function_symmetry.py  visual_function.py
deep_learning/01_introduction/: classic_programming.py  coordinate_transfer.py  draw_cifar10.py  intermediate_activations.py  linear_function.py  load_flower_image.py  mnist_dnn_network.py  networkx_sample.py  visual_convnets_learn.py
deep_learning/02_backpropagation/: local_minimum.py  neuron.py  sigmoid_function.py  visual_gradient_descent.py
deep_learning/03_simplest_network/: sequential_class.py
deep_learning/04_representation/: tensor_product.py
deep_learning/05_numpy_fundamentals/: standard_normal_distribution.py
deep_learning/18_micrograd/: demo.py  (+2 more)
engine/: CMakeLists.txt  conanfile.txt
engine/src/: CMakeLists.txt  main.cc
engine/src/media/: ffmpeg_audio_decoder.cc  ffmpeg_audio_decoder.h  ffmpeg_demux_decoder.cc  ffmpeg_demux_decoder.h  ffmpeg_video_decoder.cc  ffmpeg_video_decoder.h
keras/: binary_classify.py  deep_learning_on_mnist.py  simple_binary_classify.py  simplest_binary_classify.py
numpy/: array_creation.py  deep_learning_on_mnist.py  fundamentals.py  ndarrays_indexing.py
python/: control_flow.py  hello_world.py  intro_matplotlib.py  quick_start.py  third_library_intro.py  wave_draw.py
script/: README.md
tensorflow/: auto_differentiation.py  deep_learning_on_mnist.py  intro_neural_network.py  intro_tensors.py  introduction_neural_network.py
video/: coordinate_transfer.py  sine_curve_unit_circle.py
(+38 files in other folders)
